Readability cleanup